--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ numpy==1.17.4
 pycodestyle==2.5.0
 pylint==2.4.4
 pyparsing==2.4.5
+PyQt5==5.13.2
+PyQt5-sip==12.7.0
 python-dateutil==2.8.1
 six==1.13.0
 typed-ast==1.4.0
