--- a/mpi/matriz/Makefile
+++ b/mpi/matriz/Makefile
@@ -2,10 +2,13 @@ CC=mpicc
 
 FLAGS=
 
-all: main
+all: clean main serial
 
 main: paralelo.c
 	$(CC) $(FLAGS) paralelo.c -o paralelo.out
 
+serial: serial.c
+	gcc $(FLAGS) serial.c -o serial.out
+
 clean:
-	rm *.out
+	rm -rf *.out *.dat
