Nova topologia do projeto

--- a/mpi/matriz/Makefile
+++ b/mpi/matriz/Makefile
@@ -4,8 +4,8 @@ FLAGS=
 
 all: clean main serial
 
-main: paralelo.c
-	$(CC) $(FLAGS) paralelo.c -o paralelo.out
+main: matriz.c
+	$(CC) $(FLAGS) matriz.c -o matriz.out
 
 serial: serial.c
 	gcc $(FLAGS) serial.c -o serial.out
