Algumas mudanças para o valor apenas sair

--- a/mpi/matriz/Makefile
+++ b/mpi/matriz/Makefile
@@ -2,13 +2,10 @@ CC=mpicc
 
 FLAGS=
 
-all: clean main serial
+all: main
 
 main: matriz.c
 	$(CC) $(FLAGS) matriz.c -o matriz.out
-
-serial: serial.c
-	gcc $(FLAGS) serial.c -o serial.out
 
 clean:
 	rm -rf *.out *.dat
