--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyparsing==2.4.5
 PyQt5==5.13.2
 PyQt5-sip==12.7.0
 python-dateutil==2.8.1
+rope==0.14.0
 six==1.13.0
 typed-ast==1.4.0
 wrapt==1.11.2
