Passando argumentos via make

--- a/mpi/matriz/Makefile
+++ b/mpi/matriz/Makefile
@@ -5,7 +5,7 @@ FLAGS=
 all: main
 
 main: matriz.c
-	$(CC) $(FLAGS) matriz.c -o matriz.out
+	$(CC) $(FLAGS) matriz.c -DSIZE=${SIZE} -o matriz.out
 
 clean:
 	rm -rf *.out
