--- a/omp/matriz/Makefile
+++ b/omp/matriz/Makefile
@@ -5,7 +5,7 @@ FLAGS=-fopenmp
 all: matriz
 
 matriz: matriz.c
-	$(CC) $(FLAGS) matriz.c -o matriz.out
+	$(CC) $(FLAGS) matriz.c -DSIZE=${SIZE} -o matriz.out
 
 clean:
 	rm -rf *.out
