--- a/serial/matriz/Makefile
+++ b/serial/matriz/Makefile
@@ -5,7 +5,7 @@ FLAGS=
 all: main
 
 main: serial.c
-	$(CC) $(FLAGS) serial.c -o serial.out
+	$(CC) $(FLAGS) serial.c -DSIZE=${SIZE} -o serial.out
 
 clean:
 	rm -rf *.out
