Mais mudanças nos scripts paralelos

--- a/serial/life/Makefile
+++ b/serial/life/Makefile
@@ -5,7 +5,7 @@ FLAGS=-O3
 all: life
 
 life: life.c
-	$(CC) $(FLAGS) life.c -o life
+	$(CC) $(FLAGS) life.c -o life.out
 
 clean:
-	rm life
+	rm *.out
